Moves from routes from controllers to YAML files

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -13,6 +13,7 @@ services:
         # this means you cannot fetch services directly from the container via $container->get()
         # if you need to do this, you can override this setting on individual services
         public: false
+    Doctrine\ORM\EntityManager: '@doctrine.orm.default_entity_manager'
 
     # makes classes in src/AppBundle available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
